TelemetryDashboard: finish off rename

--- a/TelemetryDashboard/index.html
+++ b/TelemetryDashboard/index.html
@@ -30,7 +30,7 @@
     <script type="text/javascript" src="Widgets/SandBox.js"></script>
     <script type="text/javascript" src="Widgets/SubGrid.js"></script>
 
-    <script type="text/javascript" src="MAVLinkDashboard.js"></script>
+    <script type="text/javascript" src="TelemetryDashboard.js"></script>
     <script type="text/javascript" src="WidgetEdit.js"></script>
 
     <script type="text/javascript" src="../Libraries/FileSaver.js"></script>
