--- a/Dev/index.html
+++ b/Dev/index.html
@@ -62,7 +62,7 @@ The tools on this page are either developer focused, or a work in progress, they
       A tool to help understand of rotations.
     </td>
   </tr>
-  
+
   <tr>
     <td>
       <a href="../SysID" style="margin: 20px; display: inline-block;"><img src="../images/sysid_python_stateSpace.png" style="width:200px; height:200px; background-color: #f0f0f0;"></a>
@@ -71,7 +71,19 @@ The tools on this page are either developer focused, or a work in progress, they
       <h2>SysID</h2>
       A tool for identifying state-space or transfer function models for UAV dynamics
     </td>
-  </tr>  
+  </tr>
+
+  <tr>
+    <td>
+      <a href="../TelemetryDashboard" style="margin: 20px; display: inline-block;"><img src="../images/TelemetryDashboard_Icon.png" style="width:200px;"></a>
+    </td>
+    <td style="text-align:left; vertical-align:top; max-width:960px;">
+      <h2>TelemetryDashboard</h2>
+      Telemetry Dashboard allows customizable data displays from a MAVLink telemetry stream. Requires a WebSocket server to forward raw binary MAVLink, latest PyMAVLink can be used eg: <a href="https://github.com/IamPete1/pymavlink/blob/WebSocket_forwarding_example/examples/mavtcpsniff.py">TCP to WebSocket</a>. 
+      This is read only, MAVLink commands are not sent (including stream rate requests). 
+      This is not a GCS replacement.
+    </td>
+  </tr>
 
 </table>
 
