AnalyticTune: add menu item for it on Dev page

--- a/Dev/index.html
+++ b/Dev/index.html
@@ -85,6 +85,16 @@ The tools on this page are either developer focused, or a work in progress, they
     </td>
   </tr>
 
+  <tr>
+    <td>
+      <a href="../AnalyticTune" style="margin: 20px; display: inline-block;"><img src="../images/analytictune_pic.png" style="width:200px; height:200px; background-color: #f0f0f0;"></a>
+    </td>
+    <td style="text-align:left; vertical-align:top; max-width:960px;">
+      <h2>Analytic Tune</h2>
+      A tool for analytically tuning a multirotor or heli using system ID mode data
+    </td>
+  </tr>
+
 </table>
 
 </body>
