--- a/TelemetryDashboard/index.html
+++ b/TelemetryDashboard/index.html
@@ -75,7 +75,7 @@
                                 <input name="script" type="button" value="Script" style="background-color: inherit; border:none; outline:none; height:100%; border-radius:4px;">
                                 <input name="form" type="button" value="Form" style="background-color: inherit; border:none; outline:none; height:100%; border-radius:4px;">
                             </div>
-                            <div id="JSEditor" style="box-sizing:border-box; width:100%; height:100%; border-radius: 4px; padding-top:4px"></div>
+                            <div id="TextEditor" style="box-sizing:border-box; width:100%; height:100%; border-radius: 4px; padding-top:4px"></div>
                             <div id="FormEditor" style="box-sizing:border-box; width:100%; height:100%; border-radius: 4px; padding:4px; background-color:white; display:none"></div>
                         </div>
                     </td>
