--- a/TelemetryDashboard/index.html
+++ b/TelemetryDashboard/index.html
@@ -29,6 +29,7 @@
     <script type="text/javascript" src="Widgets/Menu.js"></script>
     <script type="text/javascript" src="Widgets/SandBox.js"></script>
     <script type="text/javascript" src="Widgets/SubGrid.js"></script>
+    <script type="text/javascript" src="Widgets/CustomHTML.js"></script>
 
     <script type="text/javascript" src="TelemetryDashboard.js"></script>
     <script type="text/javascript" src="WidgetEdit.js"></script>
