TelemetryDashboard: ensure options is never null

--- a/TelemetryDashboard/Widgets/SandBox.html
+++ b/TelemetryDashboard/Widgets/SandBox.html
@@ -12,7 +12,7 @@
 
     let user_class = null
     let user_script = null
-    let options = null
+    let options = {}
 
     let replace_div = function() {
         const user_div = document.createElement("div")
