TelemetryDashboard: Auto connect to MissionPlanner

--- a/Dev/index.html
+++ b/Dev/index.html
@@ -79,7 +79,7 @@ The tools on this page are either developer focused, or a work in progress, they
     </td>
     <td style="text-align:left; vertical-align:top; max-width:960px;">
       <h2>TelemetryDashboard</h2>
-      Telemetry Dashboard allows customizable data displays from a MAVLink telemetry stream. Requires a WebSocket server to forward raw binary MAVLink, latest PyMAVLink can be used eg: <a href="https://github.com/IamPete1/pymavlink/blob/WebSocket_forwarding_example/examples/mavtcpsniff.py">TCP to WebSocket</a>. 
+      Telemetry Dashboard allows customizable data displays from a MAVLink telemetry stream. Requires a WebSocket server to forward raw binary MAVLink. Attempts to auto connect to MissionPlanner at <code>ws://127.0.0.1:56781</code>. Latest PyMAVLink can also be used eg: <a href="https://github.com/IamPete1/pymavlink/blob/WebSocket_forwarding_example/examples/mavtcpsniff.py">TCP to WebSocket</a>. 
       This is read only, MAVLink commands are not sent (including stream rate requests). 
       This is not a GCS replacement.
     </td>
