--- a/TelemetryDashboard/index.html
+++ b/TelemetryDashboard/index.html
@@ -170,7 +170,7 @@
                 <label for="target_url">Server address</label>&nbsp
                 <img id="TT" src="../images/question-circle.svg" style="width: 1em;"
                 data-tippy-allowHTML="true"
-                data-tippy-content='Connection address for WebSocket server forwarding raw binary MAVLink, latest PyMAVLink can be used eg: <a href="https://github.com/IamPete1/pymavlink/blob/WebSocket_forwarding_example/examples/mavtcpsniff.py">TCP to WebSocket</a>. 
+                data-tippy-content='Connection address for WebSocket server forwarding raw binary MAVLink. Attempts to auto connect to MissionPlanner at <code>ws://127.0.0.1:56781</code>. Latest PyMAVLink can also be used eg: <a href="https://github.com/IamPete1/pymavlink/blob/WebSocket_forwarding_example/examples/mavtcpsniff.py">TCP to WebSocket</a>. 
                 This is read only, MAVLink commands are not sent (including stream rate requests).'/>
                 <br>
                 <input id="target_url" type="url" placeholder="ws://127.0.0.1:5863" required="true" pattern="^(ws|wss)://.*">
