Dev Page: add ThrustExpo link and description

--- a/Dev/index.html
+++ b/Dev/index.html
@@ -95,6 +95,19 @@ The tools on this page are either developer focused, or a work in progress, they
     </td>
   </tr>
 
+  
+  <tr>
+    <td>
+      <a href="../ThrustExpo" style="margin: 20px; display: inline-block;"><img src="../images/ThrustExpo_Icon.png" style="width:200px"></a>
+    </td>
+    <td style="text-align:left; vertical-align:top; max-width:960px;">
+      <h2>Thrust Expo</h2>
+      Use thrust test stand data to analyze motor thrust linearity.
+      Visualizes the relationship between measured thrust and throttle input, along with a plot of the thrust expo curve for optimization of MOT_THST_EXPO to achieve linear thrust response.
+      Can also estimate hover throttle.
+    </td>
+  </tr>
+
 </table>
 
 </body>
