ThrustExpo: (WIP) move to new method

--- a/ThrustExpo/index.html
+++ b/ThrustExpo/index.html
@@ -17,6 +17,7 @@
         <script src="../modules/tabulator/dist/js/tabulator.min.js"></script>
         <script src="../Libraries/ParameterMetadata.js"></script>
         <script src="../Libraries/FileSaver.js"></script>
+        <script src="../Libraries/Array_Math.js"></script>
         <script src="ThrustExpo.js"></script>
     </head>
 
