ThrustExpo: css fixups

--- a/ThrustExpo/index.html
+++ b/ThrustExpo/index.html
@@ -68,7 +68,7 @@
 
         <div class="content">
             <table><tr><td>
-            <fieldset style="height:130px">
+            <fieldset>
                 <legend>
                     Parameters
                     <img
@@ -164,7 +164,7 @@
                 </div>
             </fieldset>
             </td><td>
-            <fieldset style="height:130px">
+            <fieldset>
                 <legend>
                     Hover Thrust Estimate
                     <img
@@ -174,7 +174,7 @@
                         data-tippy-maxWidth="750px"
                     />
                 </legend>
-                <div class="param-grid" style="padding-top: 0px">
+                <div class="param-grid">
                     <div class="param-column">
                         <div
                             class="param-row"
