HardwareReport: add power flags plot

--- a/HardwareReport/index.html
+++ b/HardwareReport/index.html
@@ -250,6 +250,11 @@
   <div id="Board_Voltage" style="width:800px;height:400px"></div>
 </div>
 
+<div hidden>
+  <h3>Power flags</h3>
+  <div id="power_flags" style="width:800px;height:400px"></div>
+</div>
+
 <h3 id="CPU" hidden>CPU</h3>
 <div hidden>
   <h4>Load</h4>
