AnalyticTune: make SID runs selectable

--- a/AnalyticTune/index.html
+++ b/AnalyticTune/index.html
@@ -90,6 +90,18 @@
         </td>
         </tr>
 </table>
+<table>
+<tr>
+        <td style="width: 30px;"></td>
+        <td>
+                <fieldset style="width:600px; min-height:300px" id="sid_sets">
+                    <legend>System ID Runs</legend>
+                </fieldset>
+        </td>
+        </tr>
+
+</table>
+
             
 <table><tr><td style="width:1200px">
 <h2 style="text-align:center">Flight Data</h2>
