--- a/AnalyticTune/index.html
+++ b/AnalyticTune/index.html
@@ -208,10 +208,17 @@
         <tr>
         <td>
         <fieldset style="width:580px">
-                <legend>Attitude Controller Parameters</legend>
-                        <p>
-                                <input id="ATC_INPUT_TC" name="ATC_INPUT_TC" type="number" step="0.01" value="0.15" onchange = "calculate_freq_resp()"/>
-                        </p>
+                <legend>Attitude Controller Parameters **WARNING - Parameter values are not updated if they changed during the log**</legend>
+                        <div id="RollPitchTC" style="display:block">
+                                <p>
+                                        <input id="ATC_INPUT_TC" name="ATC_INPUT_TC" type="number" step="0.01" value="0.15" onchange = "calculate_freq_resp()"/>
+                                </p>
+                        </div>
+                        <div id="YawTC" style="display:None">
+                                <p>
+                                        <input id="PILOT_Y_RATE_TC" name="PILOT_Y_RATE_TC" type="number" step="0.01" value="0.0" onchange = "calculate_freq_resp()"/>
+                                </p>
+                        </div>
                         <div id="RollPIDS" style="display:block">
                                 <p>
                                         <input id="ATC_ANG_RLL_P" name="ATC_ANG_RLL_P" type="number" step="0.1" value="4.5" onchange = "calculate_freq_resp()"/>
