--- a/AnalyticTune/index.html
+++ b/AnalyticTune/index.html
@@ -114,10 +114,11 @@
   <input type="button" id="SaveParams" value="Save Parameters" onclick="save_parameters();">
   <button class="styleClass" onclick="document.getElementById('param_file').click()">Load Parameters</button>
   <input type='file' id="param_file" style="display:none" onchange="load_parameters(this.files[0]);">
-  <input type="button" id="GetLink" value="Get Link" onclick="get_link();">
 </p>
 
-  <form id="params" action="">
+<h2><label id="warning">WARNING - Parameter values are not updated if they changed during the log. If parameters were changed during the flight, be sure to verify the values below.</label></h2>
+
+<form id="params" action="">
 
 <fieldset style="max-width:1200px">
   <legend>INS Settings</legend>
@@ -208,7 +209,7 @@
         <tr>
         <td>
         <fieldset style="width:580px">
-                <legend>Attitude Controller Parameters **WARNING - Parameter values are not updated if they changed during the log**</legend>
+                <legend>Attitude Controller Parameters</legend>
                         <div id="RollPitchTC" style="display:block">
                                 <p>
                                         <input id="ATC_INPUT_TC" name="ATC_INPUT_TC" type="number" step="0.01" value="0.15" onchange = "calculate_freq_resp()"/>
