--- a/index.html
+++ b/index.html
@@ -23,15 +23,16 @@
   }
 
   header a {
-    color: white;
+    color: #e7f3ff;
     text-decoration: none;
     display: flex;
+    font-size: 30px;
     align-items: center;
   }
 
   header a img {
     margin-right: 10px;
-    height: 40px;
+    height: 50px;
   }
 
   h1 {
