Changed the styling of Geofence with reference to the main page

--- a/Dev/index.html
+++ b/Dev/index.html
@@ -19,7 +19,7 @@
     padding: 20px;
     background-color: #004080;
     color: white;
-  }
+    }
     header a {
     color: #e7f3ff; 
     text-decoration: none;
@@ -106,38 +106,38 @@
 
   <div class="tools">
     <div class="tool">
-      <a href="../StreamStats"><img src="../images/StreamStats_Icon.png" alt="Stream Stats Icon"></a>
-      <h2>Stream stats</h2>
+      <a href="../StreamStats"><img src="../images/StreamStats_Icon.png" alt="Stream Stats Icon">
+      <h2>Stream stats</h2></a>
       <p>Message rate analysis for tlogs and bin logs.</p>
     </div>
 
     <div class="tool">
-      <a href="../KinematicTool"><img src="../images/KinematicTool_Icon.png" alt="Kinematic Tool Icon"></a>
-      <h2>Kinematic Tool</h2>
+      <a href="../KinematicTool"><img src="../images/KinematicTool_Icon.png" alt="Kinematic Tool Icon">
+      <h2>Kinematic Tool</h2></a>
       <p>A tool to help understanding of attitude control input shaping.</p>
     </div>
 
     <div class="tool">
-      <a href="../GeofenceGenerator"><img src="../images/GeofenceGenerator_Icon.png" alt="Geofence Generator Icon"></a>
-      <h2>Geofence Generator</h2>
+      <a href="../GeofenceGenerator"><img src="../images/GeofenceGenerator_Icon.png" alt="Geofence Generator Icon">
+      <h2>Geofence Generator</h2></a>
       <p>Generates ArduPilot geofences from Open Street Map waterway data.</p>
     </div>
 
     <div class="tool">
-      <a href="../RotationCheck"><img src="../images/RotationCheck_Icon.png" alt="Rotation Check Icon"></a>
-      <h2>Rotation Check</h2>
+      <a href="../RotationCheck"><img src="../images/RotationCheck_Icon.png" alt="Rotation Check Icon">
+      <h2>Rotation Check</h2></a>
       <p>A tool to help understand of rotations.</p>
     </div>
 
     <div class="tool">
-      <a href="../SysID"><img src="../images/sysid_python_stateSpace.png" alt="SysID Icon"></a>
-      <h2>SysID</h2>
+      <a href="../SysID"><img src="../images/sysid_python_stateSpace.png" alt="SysID Icon">
+      <h2>SysID</h2></a>
       <p>A tool for identifying state-space or transfer function models for UAV dynamics.</p>
     </div>
 
     <div class="tool">
-      <a href="../TelemetryDashboard"><img src="../images/TelemetryDashboard_Icon.png" alt="Telemetry Dashboard Icon"></a>
-      <h2>TelemetryDashboard</h2>
+      <a href="../TelemetryDashboard"><img src="../images/TelemetryDashboard_Icon.png" alt="Telemetry Dashboard Icon">
+      <h2>TelemetryDashboard</h2></a>
       <p>Telemetry Dashboard allows customizable data displays from a MAVLink telemetry stream. Requires a WebSocket server to forward raw binary MAVLink. Attempts to auto connect to MissionPlanner at <code>ws://127.0.0.1:56781</code>. Latest PyMAVLink can also be used eg: <a href="https://github.com/IamPete1/pymavlink/blob/WebSocket_forwarding_example/examples/mavtcpsniff.py">TCP to WebSocket</a>. 
       This is read only, MAVLink commands are not sent (including stream rate requests). 
       This is not a GCS replacement.
@@ -145,17 +145,17 @@
   </div> 
 
   <div class="tool">
-      <a href="../AnalyticTune"><img src="../images/analytictune_pic.png"></a>
+      <a href="../AnalyticTune"><img src="../images/analytictune_pic.png">
     
-      <h2>Analytic Tune</h2>
+      <h2>Analytic Tune</h2></a>
       <p>A tool for analytically tuning a multirotor or heli using system ID mode data </p>
    </div>
 
   
    <div class="tool">
-      <a href="../ThrustExpo"><img src="../images/ThrustExpo_Icon.png"></a>
+      <a href="../ThrustExpo"><img src="../images/ThrustExpo_Icon.png">
     
-      <h2>Thrust Expo</h2>
+      <h2>Thrust Expo</h2></a>
       <p>Use thrust test stand data to analyze motor thrust linearity.
       Visualizes the relationship between measured thrust and throttle input, along with a plot of the thrust expo curve for optimization of MOT_THST_EXPO to achieve linear thrust response.
       Can also estimate hover throttle.  </p>
