--- a/GeofenceGenerator/index.html
+++ b/GeofenceGenerator/index.html
@@ -39,7 +39,7 @@
             position: absolute;
             z-index: 2000;
             width: 1200px;
-            background-color: azure;
+            background-color: #9bc8f5;
             margin: 5px;
             border-radius: 10px;
             padding: 10px;
@@ -177,3 +177,5 @@
     })
 
 </script>
+</body>
+</html>
